Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55940

qscxmlparser.cpp doesn't build with gcc 6

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.8.0 Beta
    • 5.8.0 Alpha
    • XML: SCXML
    • None
    • Arch Linux

    Description

      g++ -c -include .pch/Qt5Scxml -pipe -g -std=c+1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_BUILD_SCXML_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I/home/rutledge/dev/qt5/qtscxml/src/scxml -I. -I/home/rutledge/dev/qt5-dbg/qtbase/include -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtScxml -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtScxml/5.9.0 -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtScxml/5.9.0/QtScxml -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtQml/5.8.0 -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtQml/5.8.0/QtQml -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtCore/5.9.0 -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtCore/5.9.0/QtCore -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtQml -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtNetwork -I/home/rutledge/dev/qt5-dbg/qtbase/include/QtCore -I.moc -I/home/rutledge/dev/qt5/qtbase/mkspecs/linux-g+ -o .obj/qscxmlparser.o /home/rutledge/dev/qt5/qtscxml/src/scxml/qscxmlparser.cpp
      /home/rutledge/dev/qt5/qtscxml/src/scxml/qscxmlparser.cpp:540:84: error: 'visibility' attribute ignored [-Werror=attributes]
      int _id, void **_a)
      ^
      cc1plus: all warnings being treated as errors

      Attachments

        For Gerrit Dashboard: QTBUG-55940
        # Subject Branch Project Status CR V

        Activity

          People

            erikv Erik Verbruggen
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes