Remove unnecessary attribute from qt_static_metacall

The attribute hides methods from exported classes. As this class is not
exported at all, it is completely unnecessary. Worse, gcc 6 complains
about it.

Task-number: QTBUG-55940
Change-Id: I5461d0ddaaa387763698ec654cd54f3dc6a23920
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>